fixed the jumpy resizy in the global toolbar
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/trunk@1213 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a.css
+++ b/web/css/a.css
@@ -1917,8 +1917,13 @@ margin-right: 5px;
 	clear: both;
 	width: 100%;
 	margin: 0;
-	padding: 8px 0;
+	padding: 0;
 	overflow: hidden;
+}
+
+#a-global-toolbar .a-global-toolbar-this-page.ok
+{
+	padding: 8px 0;
 }
 
 #a-this-page-toggle.open
